[metadata]
name = ddSMT
version = attr: ddsmt.version.VERSION
url = https://github.com/aniemetz/ddSMT
download_url = https://github.com/aniemetz/ddSMT
project_urls =
    Bug Tracker = https://github.com/aniemetz/ddSMT/issues
    Documentation = https://ddsmt.readthedocs.io/
    Source Code = https://github.com/aniemetz/ddSMT
author = Aina Niemetz
author_email = foo@bar.baz
license = GPL
license_file = LICENSE
description = A delta debugger for SMT-LIBv2 files
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    progressbar>=2.5
    sphinx-rtd-theme>=0.4.3
    importlib-metadata>=1.7 ; python_version<"3.8"
python_requires = >=3.5
scripts =
    bin/ddsmt

[flake8]
count = True
extend-exclude = build/
ignore = F403,F405
max-complexity = 15
max-line-length = 140
show-source = True
statistics = True
