[metadata]
name = ddSMT
version = attr: ddsmt.version.VERSION
url = https://github.com/ddsmt/ddSMT
download_url = https://github.com/ddsmt/ddSMT
project_urls =
    Bug Tracker = https://github.com/ddsmt/ddSMT/issues
    Documentation = https://ddsmt.readthedocs.io/
    Source Code = https://github.com/ddsmt/ddSMT
author = The authors of ddSMT
license = GPL
license_file = LICENSE 
description = A delta debugger for SMT-LIBv2 files
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    gprof2dot>=2019.11
    importlib-metadata>=1.7 ; python_version<"3.8"
    progressbar>=2.5
python_requires = >=3.6
scripts =
    bin/smt2info

[options.entry_points]
console_scripts =
    ddsmt = ddsmt:__main__.main

[coverage:run]
branch = True
include =
    ddsmt/*

[coverage:report]
show_missing = True

[flake8]
count = True
extend-exclude = build/
ignore = F403,F405,W503
max-complexity = 15
max-line-length = 80
show-source = True
statistics = True

[yapf]
based_on_style = pep8
split_before_arithmetic_operator = true
split_before_bitwise_operator = true
split_before_logical_operator = true
